<resources>
    <string name="app_name">Football manager</string>

    <string name="placeholder_home_location">Lindsdal</string>
    <string name="placeholder_home_arena">Fjölebro</string>

    <string name="placeholder_away_location">Mörbylånga</string>
    <string name="placeholder_away_arena">Runsten</string>

    <string name="title_home">Home</string>
    <string name="title_away">Away</string>

    <string name="title">Title</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_open">Open</string>
    <string name="title_email">Email</string>
    <string name="title_over_view">Overview</string>
    <string name="title_history">History</string>
    <string name="content_descript_club_crest">Club Crest</string>
    <string name="content_descript_game_details">Game details</string>
    <string name="content_description_google_maps">Google maps</string>
    <string name="title_line_up">Lineup</string>
    <string name="title_weather">Weather</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_location">Location</string>
    <string name="title_close">Close</string>
    <string name="title_rainy">Rainy</string>
    <string name="placeholder_date">2018-12-02</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_upcoming_games">Upcoming games</string>
    <string name="title_wind_speed">Wind Speed</string>

    <plurals name="plurals">
        <item quantity="one">few %d</item>
        <item quantity="two">two %d</item>
        <item quantity="other">zero %d</item>
    </plurals>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
