<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_overview">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_upcoming_games"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Title_Large.Family_Normal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/title_location"/>

        <ImageButton
            style="@style/Normal_Button"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description_google_maps"
            app:srcCompat="@drawable/ic_00_black_location"/>

        <TextView
            style="@style/Title_Medium.Family_Normal"
            android:text="@string/placeholder_date"/>

        <ImageButton
            style="@style/Normal_Button"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description_google_maps"
            app:srcCompat="@drawable/ic_00_black_open_new"/>

    </LinearLayout>
</LinearLayout>